--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "class-names": "^1.0.0",
     "es6-promise": "^3.1.2",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-google-maps": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.2",
